cmake_minimum_required(VERSION 3.5)
project(testmulti VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=thread")
set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=thread")
find_package(Threads REQUIRED)
include_directories(include)
add_executable(lock src/lock.cpp)
add_executable(race src/race.cpp)
add_executable(atomic src/atomic.cpp)
add_executable(atomic2 src/atomic2.cpp)
target_link_libraries(lock Threads::Threads)
target_link_libraries(race Threads::Threads)
target_link_libraries(atomic Threads::Threads)
target_link_libraries(atomic2 Threads::Threads)